--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     </section>
 
     <section class="main-content">
+      <div class="fb-send-to-messenger" 
+      messenger_app_id="1599804023668858" 
+      page_id="641783275962446" 
+      data-ref="https://www.facebook.com/NicaBot-641783275962446/" 
+      color="blue" 
+      size="standard"></div>
     <script>
       window.fbAsyncInit = function() {
         FB.init({
