--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
       data-ref="https://www.facebook.com/NicaBot-641783275962446/" 
       color="blue" 
       size="standard"></div>
+      
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            appId      : '1599804023668858',
+            xfbml      : true,
+            version    : 'v2.6'
+          });
+        };
+      
+        (function(d, s, id){
+           var js, fjs = d.getElementsByTagName(s)[0];
+           if (d.getElementById(id)) {return;}
+           js = d.createElement(s); js.id = id;
+           js.src = "//connect.facebook.net/en_US/sdk.js";
+           fjs.parentNode.insertBefore(js, fjs);
+         }(document, 'script', 'facebook-jssdk'));
+      </script>
     <script>
       window.fbAsyncInit = function() {
         FB.init({
