--- a/index.html
+++ b/index.html
@@ -19,34 +19,17 @@
     </section>
 
     <section class="main-content">
-      <div class="fb-send-to-messenger" 
-      messenger_app_id="1599804023668858" 
-      page_id="641783275962446" 
-      data-ref="https://www.facebook.com/NicaBot-641783275962446/" 
-      color="blue" 
-      size="standard"></div>
       
-      <script>
-        window.fbAsyncInit = function() {
-          FB.init({
-            appId      : '1599804023668858',
-            xfbml      : true,
-            version    : 'v2.6'
-          });
-        };
-      
-        (function(d, s, id){
-           var js, fjs = d.getElementsByTagName(s)[0];
-           if (d.getElementById(id)) {return;}
-           js = d.createElement(s); js.id = id;
-           js.src = "//connect.facebook.net/en_US/sdk.js";
-           fjs.parentNode.insertBefore(js, fjs);
-         }(document, 'script', 'facebook-jssdk'));
-      </script>
+    <div
+      class="fb-like"
+      data-share="true"
+      data-width="450"
+      data-show-faces="true">
+    </div>
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId      : '<APP_ID>',
+          appId      : '1599804023668858',
           xfbml      : true,
           version    : 'v2.6'
         });
