--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1 class="project-name">Nicabot</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/rjcd95/NicaBot" class="btn">View on GitHub</a>
+      <a href="https://www.facebook.com/NicaBot-641783275962446" class="btn">View on FaceBook</a>
       <a href="https://github.com/rjcd95/NicaBot/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/rjcd95/NicaBot/tarball/master" class="btn">Download .tar.gz</a>
     </section>
