--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="https://github.com/rjcd95/NicaBot" class="btn">View on GitHub</a>
       <a href="https://www.facebook.com/NicaBot-641783275962446" class="btn">View on FaceBook</a>
       <a href="https://github.com/rjcd95/NicaBot/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/rjcd95/NicaBot/tarball/master" class="btn">Download .tar.gz</a>
+      <!--<a href="https://github.com/rjcd95/NicaBot/tarball/master" class="btn">Download .tar.gz</a>-->
     </section>
 
     <section class="main-content">
